# voxelicous-engine-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  plan.md  plan_status.md
.claude/: settings.local.json
apps/voxelicous-benchmark/: Cargo.toml
apps/voxelicous-benchmark/src/: main.rs
apps/voxelicous-editor/: Cargo.toml
apps/voxelicous-editor/src/: main.rs
apps/voxelicous-profiler-tui/: Cargo.toml
apps/voxelicous-profiler-tui/src/: client.rs  main.rs
apps/voxelicous-profiler-tui/src/ui/: dashboard.rs  mod.rs
apps/voxelicous-viewer/: Cargo.toml
apps/voxelicous-viewer/src/: app.rs  main.rs  terrain.rs
crates/voxelicous-app/: Cargo.toml
crates/voxelicous-app/src/: app.rs  context.rs  frame.rs  lib.rs  runner.rs  unified_pipeline.rs
crates/voxelicous-audio/: Cargo.toml
crates/voxelicous-audio/src/: lib.rs
crates/voxelicous-core/: Cargo.toml
crates/voxelicous-core/src/: coords.rs  error.rs  lib.rs  math.rs  types.rs
crates/voxelicous-entity/: Cargo.toml
crates/voxelicous-entity/src/: lib.rs
crates/voxelicous-gpu/: Cargo.toml
crates/voxelicous-gpu/src/: capabilities.rs  command.rs  context.rs  deferred.rs  descriptors.rs  error.rs  instance.rs  lib.rs  memory.rs  pipeline.rs  surface.rs  swapchain.rs  sync.rs
crates/voxelicous-input/: Cargo.toml
crates/voxelicous-input/src/: action.rs  button_state.rs  input.rs  keyboard.rs  lib.rs  modifiers.rs  mouse.rs
crates/voxelicous-nvidia/: Cargo.toml
crates/voxelicous-nvidia/src/: acceleration.rs  lib.rs  ray_trace.rs  sbt.rs
crates/voxelicous-physics/: Cargo.toml
crates/voxelicous-physics/src/: lib.rs
crates/voxelicous-platform/: Cargo.toml
crates/voxelicous-platform/src/: lib.rs
crates/voxelicous-profiler/: Cargo.toml
crates/voxelicous-profiler/src/: collector.rs  context.rs  events.rs  lib.rs  macros.rs  ring_buffer.rs
crates/voxelicous-profiler/src/ipc/: mod.rs  protocol.rs  server.rs
crates/voxelicous-render/: Cargo.toml
crates/voxelicous-render/src/: async_upload.rs  camera.rs  clipmap_ray_march_pipeline.rs  clipmap_render.rs  debug.rs  lib.rs  ray_march.rs  ray_march_pipeline.rs  screenshot.rs  svo_upload.rs  world_ray_march_pipeline.rs  world_render.rs
crates/voxelicous-shaders/: Cargo.toml  build.rs
crates/voxelicous-shaders/shaders/: crosshair_overlay.comp  ray_march_clipmap.comp  ray_march_svo.comp  ray_march_world.comp  ray_trace_svo.rchit  ray_trace_svo.rgen  ray_trace_svo.rint  ray_trace_svo.rmiss
crates/voxelicous-shaders/src/: lib.rs
crates/voxelicous-test/: Cargo.toml
crates/voxelicous-test/src/: harness.rs  lib.rs
crates/voxelicous-voxel/: Cargo.toml
crates/voxelicous-voxel/src/: clipmap.rs  dag.rs  lib.rs  svo.rs
crates/voxelicous-world/: Cargo.toml
crates/voxelicous-world/src/: chunk.rs  chunk_manager.rs  clipmap_streaming.rs  generation.rs  lib.rs  streaming.rs
