[package]
name = "voxelicous-editor"
description = "Editor application for the Voxelicous engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
profiling-tracy = ["dep:tracing-tracy", "voxelicous-render/profiling-tracy", "voxelicous-gpu/profiling-tracy"]

[dependencies]
voxelicous-core.workspace = true
voxelicous-gpu.workspace = true
voxelicous-voxel.workspace = true
voxelicous-render.workspace = true
voxelicous-platform.workspace = true
voxelicous-entity.workspace = true
winit.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tracy = { workspace = true, optional = true }
