[package]
name = "voxelicous-app"
description = "Application framework for the Voxelicous engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
profiling = ["dep:voxelicous-profiler", "voxelicous-profiler/profiling"]
profiling-tracy = ["dep:tracing-tracy"]

[dependencies]
voxelicous-core.workspace = true
voxelicous-gpu.workspace = true
voxelicous-render.workspace = true
voxelicous-profiler = { workspace = true, optional = true }
winit.workspace = true
ash.workspace = true
glam.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-tracy = { workspace = true, optional = true }
anyhow.workspace = true

[lints]
workspace = true
