[package]
name = "voxelicous-core"
description = "Core types and traits for the Voxelicous engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
glam.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
approx.workspace = true
