[package]
name = "voxelicous-gpu"
description = "Vulkan abstraction layer for the Voxelicous engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
headless = []
profiling-tracy = []

[dependencies]
voxelicous-core.workspace = true
ash.workspace = true
ash-window.workspace = true
gpu-allocator.workspace = true
raw-window-handle.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
bytemuck.workspace = true

[dev-dependencies]
