[package]
name = "voxelicous-physics"
description = "Voxel collision and physics for the Voxelicous engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
voxelicous-core.workspace = true
voxelicous-voxel.workspace = true
glam.workspace = true
rapier3d.workspace = true
