[package]
name = "voxelicous-test"
description = "Test harness for the Voxelicous engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true


[dependencies]
voxelicous-core.workspace = true
voxelicous-gpu.workspace = true
voxelicous-render.workspace = true
voxelicous-voxel.workspace = true
ash.workspace = true
glam.workspace = true
image.workspace = true
insta.workspace = true
thiserror.workspace = true
tracing.workspace = true
